--- a/report.bib
+++ b/report.bib
@@ -1,29 +1,14 @@
 @manual{LabManual,
-title        = {Lab session 2: evaluating a KF and motion models},
-author       = {Gustavo Quintana}, 
+title        = {Lab session Manuals},
+author       = {Carmen Torres}, 
 organization = {Vrije Univesiteit Brussel},
-month        = 11,
+month        = 10-12,
 year         = 2017,
 }
-@unpublished{LectureA,
-  Author = {Kleeman, Lindsay},
-  Institution = {Monash University, Clayton},
-  Howpublished = {University Lecture},
-  Year = {2017},
-  Title = {Understanding and Applying Kalman Filtering}
-}
-@article{article1,
-    author =       "Ramsey Faragher",
-    title =        "{Understanding the Basis of the Kalman Filter nderstanding the Basis of the Kalman Filter}",
-    journal =      "IEEE SIGNAL PROCESSING MAGAZINE",
-    pages =        "129--132",
-    year =         "2012",
-    DOI =          "https://www.cl.cam.ac.uk/~rmf25/papers/Understanding%20the%20Basis%20of%20the%20Kalman%20Filter.pdf"
-}
-@book{book1,
-    author =       "Roger R Labbe Jr",
-    title =        "{Kalman and Bayesian Filters in Python}",
-    year =         "2017",
-    publisher = "Addison-Wesley",
-    address   = "Reading, Massachusetts"
+
+@book{sysml,
+    author =       "Lenny Delligatti",
+    title =        "{SysML Distilled}",
+    year =         "2013",
+    publisher = "OMGSysMl"
 }
