--- a/report.bib
+++ b/report.bib
@@ -5,7 +5,16 @@ organization = {Vrije Univesiteit Brussel},
 month        = 10-12,
 year         = 2017,
 }
-
+@online{umlSite,
+  titleu = {Introduction To OMG's Unified Modeling Language},
+  url = = {http://www.uml.org/what-is-uml.htm},
+  urldate = {Accessed: 2017-12-23}
+}
+@online{tut,
+  title = {UML Tutorial},
+  url = = {https://www.tutorialspoint.com/uml/},
+  urldate = {Accessed: 2017-12-22}
+}
 @book{sysml,
     author =       "Lenny Delligatti",
     title =        "{SysML Distilled}",
