--- a/report.tex
+++ b/report.tex
@@ -297,6 +297,19 @@
             
             There are 10 possible states, 7 sub-states and more than 12 operations for the appointment. All the operations are also included in the class diagram and  better explained with the respective arguments and return values.
             
+            For the state diagram is also important to verify that the entity can not remain in a trap state and that it can easily change and even go back to previous states until it reaches
+            an end.
+            
+            \section{conclusion}
+            
+            UML is an important language to understant in order to work in a project as an Applied Computer Scientist. It is some how the standart "protocol" or to read and design the blueprints of
+            a product (software or hardware). This report may notbe perfect but it was a good first approach to get to know the different diagrams and the modeling process aswell. 
+            
+            I definetvely belivie taht modeling has to be considered and applied in every project, to share the idea with the team and to validate that all the requierements from the stake holders are being
+            considered. It will also help in the future re-processing due to unclear concepts and it also helps to decentralize and spread the functionality and logig form the project to the team involved.
+            
+            Next, I will also like to explore SysML as a complementary part of modeling for systems and to apply it in an agile development environment. 
+            
         
             \newpage
             \bibliography{report}
