changes in activity diagram and class diagram

--- a/report.bib
+++ b/report.bib
@@ -2,22 +2,22 @@
 title        = {Lab session Manuals},
 author       = {Carmen Torres}, 
 organization = {Vrije Univesiteit Brussel},
-month        = 10-12,
+month        = 12,
 year         = 2017,
 }
 @online{umlSite,
-  titleu = {Introduction To OMG's Unified Modeling Language},
-  url = = {http://www.uml.org/what-is-uml.htm},
+  title = {Introduction To OMG's Unified Modeling Language},
+  url =  {http://www.uml.org/what-is-uml.htm},
   urldate = {Accessed: 2017-12-23}
 }
 @online{tut,
   title = {UML Tutorial},
-  url = = {https://www.tutorialspoint.com/uml/},
+  url =  {https://www.tutorialspoint.com/uml/},
   urldate = {Accessed: 2017-12-22}
 }
 @book{sysml,
-    author =       "Lenny Delligatti",
-    title =        "{SysML Distilled}",
-    year =         "2013",
-    publisher = "OMGSysMl"
+    author =       {Lenny Delligatti},
+    title =        {SysML Distilled},
+    year =         {2013},
+    publisher = {OMGSysMl}
 }
