--- a/report.tex
+++ b/report.tex
@@ -141,7 +141,7 @@
 
             \begin{figure}[H]
                 \centering 
-                \includegraphics[width=1\linewidth]{./img/class.png}
+                \includegraphics[width=1\linewidth]{./img/class2.png}
                 \setcaptioncitation{Created with Modelio 3.7.}
                 \caption{Class Diagram.}
                 \label{fig:class}
@@ -265,6 +265,9 @@
             \end{itemize}
 
             At the same time every activity contains sub-activities that are required to finish an activity before going to the next one.
+
+            Normally the activity diagram is divided by columns by actors that represents who will realize each action. For this implementation due to the variability of the activities and for presentation reasons,
+            I have decided to add an Icon representing every actor next to the activity.
             
             \begin{figure}[H]
                 \centering 
@@ -302,11 +305,11 @@
             
             \section{conclusion}
             
-            UML is an important language to understant in order to work in a project as an Applied Computer Scientist. It is some how the standart "protocol" or to read and design the blueprints of
-            a product (software or hardware). This report may notbe perfect but it was a good first approach to get to know the different diagrams and the modeling process aswell. 
+            UML is an important language to understand in order to work in a project as an Applied Computer Scientist. It is some how the standard "protocol" or to read and design the blueprints of
+            a product (software or hardware). This report may not be perfect but it was a good first approach to get to know the different diagrams and the modeling process as well. 
             
-            I definetvely belivie taht modeling has to be considered and applied in every project, to share the idea with the team and to validate that all the requierements from the stake holders are being
-            considered. It will also help in the future re-processing due to unclear concepts and it also helps to decentralize and spread the functionality and logig form the project to the team involved.
+            I definitively believe that modeling has to be considered and applied in every project, to share the idea with the team and to validate that all the requirements from the stake holders are being
+            considered. It will also help in the future re-processing due to unclear concepts and it also helps to decentralize and spread the functionality and logic form the project to the team involved.
             
             Next, I will also like to explore SysML as a complementary part of modeling for systems and to apply it in an agile development environment. 
             
